fix partial visibility of hover background in non-hover states on .btn--up class

--- a/themes/gfsc/assets/sass/components/_buttons.sass
+++ b/themes/gfsc/assets/sass/components/_buttons.sass
@@ -14,11 +14,11 @@ a.btn, .btn a
     color: $secondary
     background-position: -95% 0
   &--up
-    background-size: 100% 200%
+    background-size: 100% 220%
     background-image: linear-gradient(to top,  $primary 50%, transparent 50%)
   &--up:hover
     color: $secondary
-    background-position: 0 100%;
+    background-position: 0 95%;
 
 a.link, .teaser__excerpt a
   display: inline-block
